--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
             </div>
         </div>
 
-        <small class="color:grey">
+        <small style="color:grey">
             Copyright &copy 2023 All rights reserved | This Template was created by dev master <a href='https://www.linkedin.com/in/aubrey-t-dube-194896288'>@greytyler</a> from an inspiration of an already-existing design.<span class="fa fa-heart"style='color:var(--green);font-size:1.5rem;'></span>
         </small>
     </footer>
